Bug 72521 - KDE: misbehavior of combo-boxes in Character dialog
Summary: KDE: misbehavior of combo-boxes in Character dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.3.2 release
Hardware: Other Linux (All)
: medium major
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords:
: 72960 74678 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-09 14:17 UTC by Maxim Monastirsky
Modified: 2014-02-09 21:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2013-12-09 14:17:30 UTC
Pre-requisites:

1. Install KDE4 integration ('libreoffice-kde' package in Fedora\Debian\Ubuntu), and make sure you're actually using it (by running under KDE or by exporting 'SAL_USE_VCLPLUGIN=kde4').
2. Enable CTL\Asian support (Tools->Options...->Language Settings->Languages).

Steps to reproduce:

1. Open Writer.
2. Go to Format->Character...
(3. Switch to 'Font' tab if it was opened with another tab.)
4. Click on one of the combo-boxes (Family\Style\Size).

Results:

Font Family combo-box gets wider with each click, making the other combo-boxes impossible to use.

Tested with:
4.1.3.2 under Ubuntu 13.10 (64-bit) & Fedora 19 (64-bit)
master build (with --enable-kde4, Build ID: 93210ec3b3e7e773e998a3771136043748232f85)
Comment 1 Marco Menardi 2014-01-04 19:01:34 UTC
Reproducible with 4.1.4~rc2 andkde 4.12 kubuntu 12.04-32
Not present in 4.2.0 rc1, IF libobasis4.2-kde-integration is equivalent of libreoffice-kde (otherwise my test with 4.2 is meaningless).
Can't bibisect since related to kde integration
Comment 2 Maxim Monastirsky 2014-01-05 07:08:33 UTC
Hi Marco, thanks for confirming this bug!

(In reply to comment #1)
> Not present in 4.2.0 rc1, IF libobasis4.2-kde-integration is equivalent of
> libreoffice-kde (otherwise my test with 4.2 is meaningless).
libobasis4.2-kde-integration is for KDE3, not for KDE4. See Bug 48611.
Comment 3 Marco Menardi 2014-01-05 15:15:25 UTC
Ah, very bad I do use KDE and deploy to schools, bug 48611 looks a problem and I'm wondering how can we reliable test LiBo with KDE if it's integration with KDE itself is left to the good will of distro packagers, probably with code out of control from Libo devs.
Comment 4 Maxim Monastirsky 2014-01-05 15:24:43 UTC
(In reply to comment #3)
> probably with code out of control from Libo devs.
Why out of control? The KDE4 integration code is actually stored in LO code repository, it just not builded\distributed with the official builds.
Comment 5 Maxim Monastirsky 2014-01-07 11:13:28 UTC
I think that I found the right solution for this bug. I submitted it to gerrit: https://gerrit.libreoffice.org/7287/. It should also fix Bug 73103.
Comment 6 Commit Notification 2014-01-07 16:12:06 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a62a80ac6cc0e337f4ff6d862bccc13c720d41ac

fdo#72521 fdo#73103 Fix editable combo-boxes behavior under KDE4



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Maxim Monastirsky 2014-01-13 13:45:37 UTC
*** Bug 72960 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2014-01-16 15:26:41 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7eaab54fdcafd4220f1585a02da70eba951ead6&h=libreoffice-4-2

fdo#72521 fdo#73103 Fix editable combo-boxes behavior under KDE4


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Maxim Monastirsky 2014-02-09 21:13:34 UTC
*** Bug 74678 has been marked as a duplicate of this bug. ***