fdo#72521 fdo#73103 Fix editable combo-boxes behavior under KDE4

Change-Id: I92a781a1e0f0adcb779155f8c477595e0dd762b1